--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "msweeneydev",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt build",
     "build": "nuxt generate",
     "start": "nuxt start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
