--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "author": "msweeneydev",
   "private": true,
   "scripts": {
-    "dev": "nuxt build",
+    "dev": "nuxt",
     "build": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "browsersync": "browser-sync start --proxy localhost:3000"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "nodemon": "^1.18.9"
   }
 }
